# simple_chatgpt_4

./: .dockerignore  .env.dist  .flake8  .gitignore  Dockerfile  README.md  add_authorized_email.sh  config.py  docker-compose-dev.yml  docker-compose.yml  execute_unit_tests.py  kill.sh  log_config.json  main.py  models_data.json  pyproject.toml  requirements.txt  requirements.txt.old  server.py  setup.sh  start_dev.sh  start_prd.sh
.github/: dependabot.yml
application/server/: routes.py
components/chat/: ChatState.py  RedisState.py
components/chat_code_repository/: ChatCode.py  CodeRepository.py  CodeRepositoryTest.py  CodeUseSupport.py  CodeUseSupportTest.py
components/database/: DDBConnector.py  DDBConnectorSync.py  Database.py  DatabaseComponentTest.py  DatabaseIntegrationTest.py
components/elasticsearch/: ElasticClient.py
components/gpt_4/: GPT4.py  GPT4Test.py
components/llm/: BaseModel.py  Claude.py  DeepSeek.py  GPT4.py  Gemini.py  Gemini.py.unused  Mistral.py
components/login/: JWTManager.py  Login.py
components/repository/: DDBRepository.py  Repository.py  User.py
components/tests/: ChatStateTest.py  DDBConnectorSyncTest.py  DDBConnectorTest.py  DDBRepositoryTest.py  ESTest.py  GPT4Test.py  GeminiTest.py
conf/: flyway.conf
constants/: AppConstants.py  GoogleServicesConstants.py  WebSocketStatesEnum.py  WebsocketConstants.py
middleware/: authentication.py
models/: ChatModel.py  ChatStateModel.py  MessageModel.py  UserModel.py  WebSocketMessageModel.py
react-app/: copy-build-files.js  deploy.sh  package-lock.json  package.json
react-app/public/: index.html
react-app/src/: App.js  index.js  setupProxy.js
react-app/src/api/: api.js
react-app/src/components/: ChatInput.js  ChatMessages.css  ChatMessages.js  ChatPage.css  ChatPage.js  ChatSidebar.css  ChatSidebar.js  EmailForm.css  EmailForm.js  Loading.js  OptionsContainer.css  OptionsContainer.js  PasswordForm.js  ProtectedRoute.js
server/: logging.py  routes.py
server/handlers/: chat.py  login.py  models.py  ws.py
sql/: V1__create_chat_codes_table.sql
src/: main.py
src/components/chat/: RedisState.py
src/components/database/: DDBConnector.py
src/components/elasticsearch/: ElasticClient.py
src/components/llm/: BaseModel.py  Claude.py  DeepSeek.py  GPT4.py  Mistral.py
src/components/login/: JWTManager.py  Login.py
src/components/repository/: DDBRepository.py  Repository.py
src/constants/: AppConstants.py
src/exceptions/: Exceptions.py
src/middleware/: authentication.py
src/server/: routes.py
src/server/handlers/: chat.py  login.py  models.py  ws.py
static/: chat.html  index.html
