[tool.poetry]
name = "gpt4"
version = "1.5.0"
description = "Chat app that bundles LLM APIs"
authors = ["Sebastian <sebastian.ampuerom@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "23.2.1"
aiohttp = "3.10.6"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anthropic = "0.30.0"
anyio = "4.4.0"
async-timeout = "4.0.3"
attrs = "23.2.0"
boto3 = "1.34.122"
botocore = "1.34.122"
cachetools = "5.3.3"
certifi = "2024.6.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
cryptography = "42.0.8"
distro = "1.9.0"
docstring-parser = "0.16"
elastic-transport = "8.13.1"
elasticsearch = "8.14.0"
filelock = "3.15.4"
frozenlist = "1.4.1"
fsspec = "2024.6.0"
google-api-core = "2.19.0"
google-auth = "2.30.0"
google-cloud-aiplatform = "1.49.0"
google-cloud-bigquery = "3.24.0"
google-cloud-core = "2.4.1"
google-cloud-resource-manager = "1.12.3"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.1"
grpc-google-iam-v1 = "0.13.0"
grpcio = "1.64.1"
grpcio-status = "1.62.2"
h11 = "0.14.0"
html5tagger = "1.3.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.25.2"
huggingface-hub = "0.23.4"
idna = "3.7"
jiter = "0.5.0"
jmespath = "1.0.1"
mistralai = "0.4.0"
multidict = "6.0.5"
numpy = "1.26.4"
openai = "1.55.0"
orjson = "3.10.15"
packaging = "24.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic = "2.7.3"
pydantic-core = "2.18.4"
pyjwt = "2.8.0"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
redis = "5.0.3"
requests = "2.32.3"
rsa = "4.9"
s3transfer = "0.10.1"
sanic = "23.12.1"
sanic-routing = "23.12.0"
shapely = "2.0.4"
six = "1.16.0"
sniffio = "1.3.1"
tokenizers = "0.19.1"
tqdm = "4.66.4"
tracerite = "1.1.1"
typing-extensions = "4.12.2"
ujson = "5.10.0"
urllib3 = "2.2.1"
uvloop = "0.19.0"
vertexai = "1.49.0"
websockets = "12.0"
yarl = "1.12.0"
setuptools = "^75.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
