[tool.poetry]
name = "gpt4"
version = "1.5.0"
description = "Chat app that bundles LLM APIs"
authors = ["Sebastian <sebastian.ampuerom@gmail.com>"]
license = "GNU General Public License 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aiohttp = "3.11.16"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anthropic = "0.49.0"
anyio = "4.9.0"
async-timeout = "5.0.1"
attrs = "25.3.0"
boto3 = "1.34.162"
botocore = "1.34.162"
cachetools = "5.5.2"
certifi = "2025.1.31"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
cryptography = "44.0.2"
distro = "1.9.0"
docstring-parser = "0.16"
elastic-transport = "8.17.1"
elasticsearch = "8.17.2"
filelock = "3.18.0"
frozenlist = "1.5.0"
fsspec = "2025.3.2"
h11 = "0.14.0"
html5tagger = "1.3.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.25.2"
huggingface-hub = "0.31.4"
idna = "3.10"
jiter = "0.9.0"
jmespath = "1.0.1"
mistralai = "0.4.2"
multidict = "6.2.0"
numpy = "2.2.4"
openai = "1.77.0"
orjson = "3.10.16"
packaging = "24.2"
proto-plus = "1.26.1"
protobuf = "4.25.6"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pyjwt = "2.10.1"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.1"
redis = "5.2.1"
requests = "2.32.3"
rsa = "4.9"
s3transfer = "0.10.4"
sanic = "25.3.0"
sanic-routing = "23.12.0"
shapely = "2.0.7"
six = "1.17.0"
sniffio = "1.3.1"
tokenizers = "0.20.2"
tqdm = "4.67.1"
tracerite = "1.1.1"
typing-extensions = "4.13.1"
ujson = "5.10.0"
urllib3 = "2.4.0"
uvloop = "0.20.0"
websockets = "14.1"
yarl = "1.18.3"
setuptools = "^78.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
