[tool.poetry]
name = "gpt4"
version = "1.5.0"
description = "Chat app that bundles LLM APIs"
authors = ["Sebastian <sebastian.ampuerom@gmail.com>"]
license = "GNU General Public License 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "24.1.0"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
annotated-types = "0.7.0"
anthropic = "0.59.0"
anyio = "4.9.0"
async-timeout = "5.0.1"
attrs = "25.3.0"
boto3 = "1.39.13"
botocore = "1.39.13"
cachetools = "5.5.2"
certifi = "2025.7.14"
cffi = "1.17.1"
charset-normalizer = "3.4.2"
cryptography = "44.0.2"
distro = "1.9.0"
docstring-parser = "0.17.0"
elastic-transport = "8.17.1"
elasticsearch = "8.17.2"
filelock = "3.18.0"
frozenlist = "1.7.0"
fsspec = "2025.7.0"
h11 = "0.16.0"
html5tagger = "1.3.0"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
huggingface-hub = "0.33.5"
idna = "3.10"
jiter = "0.10.0"
jmespath = "1.0.1"
mistralai = "0.4.2"
multidict = "6.6.3"
numpy = "2.3.2"
openai = "1.97.1"
packaging = "24.2"
proto-plus = "1.26.1"
protobuf = "4.25.6"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.2"
pycparser = "2.22"
pydantic = "2.11.7"
pyjwt = "2.10.1"
python-dateutil = "2.9.0.post0"
pyyaml = "6.0.2"
redis = "5.2.1"
requests = "2.32.4"
rsa = "4.9.1"
s3transfer = "0.13.1"
sanic = "25.3.0"
sanic-routing = "23.12.0"
shapely = "2.1.1"
six = "1.17.0"
sniffio = "1.3.1"
tokenizers = "0.21.2"
tqdm = "4.67.1"
tracerite = "1.1.3"
typing-extensions = "4.14.1"
ujson = "5.10.0"
urllib3 = "2.5.0"
uvloop = "0.21.0"
websockets = "14.1"
yarl = "1.20.1"
setuptools = "^78.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"